--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -11,6 +11,10 @@ Data Crow 3.9.13  [Released on June xx, 2012]  [testing: high]  [target: product
 - Improved German translation (thanks Maase!)
 - Create Multiple for audio tracks now starts the numbering based on the highest track
   number currently in use
+- Small changes to the loan information; removed "days till overdue" and added "status"
+  and "# days"
+- The Loan administration form will now open the loan information directly on a double
+  click
 
 [New]
 - Google.com book search, allows for searching both on keywords and ISBNs
@@ -29,7 +33,9 @@ Data Crow 3.9.13  [Released on June xx, 2012]  [testing: high]  [target: product
 - The web client suppresses information in case an item does not hold a value 
   for the selected web field
 - Longer wait time for the file synchronizer when there are no items found to synchronize
-     
+- Loan administration Form size is not remembered.
+- Loan administration overview is cleared when clicking on a column header
+- The loan administration overview now refreshes after dealing with the loans      
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.9.12  [Released on March 10, 2012]  [testing: high]  [target: production]
