*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,13 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.9.13  [Released on June 16, 2012]  [testing: high]  [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Reports not working
+- Google search sometimes throws a NullPointerException
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.9.13  [Released on June 9, 2012]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 
