--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,17 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.9.15  [Released on November xx, 2012]  [testing: high]  [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- In the web client sorting for numbers was incorrect (1,12,2 instead of 1,2,12).
+- In the web client information for multi-reference fields was sometimes duplicated.
+- Multi-reference fields could not be edited in the web client.
+
+[Changed]
+- Charts: now also possible to create charts for fields such as author, publisher, etc.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.9.14  [Released on June 16, 2012]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 
