*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -5,6 +5,11 @@ Data Crow 3.9.19  [Released on January 18, 2013]  [testing: high]  [target: prod
 [Fixed]
 - Users can now safely upgrade from version 3.8.16 and early; without losing of pictures.
 
+[Changed]
+- Specifies the user directory relative to the Data Crow installation folder. 
+  Start the name with a dot (.) to make the path relative to the installation folder;
+  ./data or .\data. This only works for the -userdir: parameter.
+
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.9.18  [Released on January 18, 2013]  [testing: high]  [target: production]
