--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.9.20  [Released on January xx, 2013]  [testing: high]  [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Restore process (?)
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.9.19  [Released on January 18, 2013]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 
