--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -3,7 +3,8 @@ Data Crow 3.9.20  [Released on January xx, 2013]  [testing: high]  [target: prod
 -----------------------------------------------------------------------------------------
 
 [Fixed]
-- Restore process (?)
+- Changed the restore and backup process to support backups larger than 4.28GB with the
+  use of TrueZip.
 
 
 -----------------------------------------------------------------------------------------
