*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.9.21  [Released on February xx, 2013]  [testing: high]  [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Minor fixes for the restore process.
+  
+  
+-----------------------------------------------------------------------------------------
 Data Crow 3.9.20  [Released on February 02, 2013]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 
