*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -8,7 +8,12 @@ Data Crow 3.9.21  [Released on February xx, 2013]  [testing: high]  [target: pro
 [Changed]
 - Various optimizations.  
 - Updated the German translation - thanks to Norman Weimar
-
+- Prevent users from selecting the installation folder as the user folder. The user 
+  folder is and was meant to separate the installation folder from the user folder.
+  Mostly because the OS these days add additional security to the installation folders
+  not allowing ordinary users to change files. You can still select a folder inside
+  off the Data Crow installation folder.
+  
   
 -----------------------------------------------------------------------------------------
 Data Crow 3.9.20  [Released on February 02, 2013]  [testing: high]  [target: production]
