*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,10 +1,13 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.9.21  [Released on March 24, 2013]  [testing: high]  [target: production]
+Data Crow 3.9.22  [Released on March xx, 2013]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
 - Issue with the file importer; resource consumption has been lowered
 - Issue with the file importer; check whether an item already exists has been improved
+- Searching on ISBN for books does not work in case the ISBN contains an X
+- Fixed the CSV import for text containing a double quote character
+
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.9.21  [Released on February 10, 2013]  [testing: high]  [target: production]
