--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,14 +1,17 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.9.22  [Released on March xx, 2013]  [testing: high]  [target: production]
+Data Crow 3.9.22  [Released on April 29, 2013]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
 - Fixed multiple upgrade issues (not being able to log in after upgrade). The system
   will correct problems on startup for failed upgrades or else when newly upgrading.
+- A check will be done on startup to correct, if necessary, any inconsistencies in the 
+  database.
 - Issue with the file importer; resource consumption has been lowered.
 - Issue with the file importer; check whether an item already exists has been improved.
 - Searching on ISBN for books does not work in case the ISBN contains an X.
 - Fixed the CSV import for text containing a double quote character.
+- Added checks for the Quick Filter.
 
 [Changed]
 - Updated version of the Italian translation from Marco Artioli (thanks!).
