*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,13 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.9.23  [Released on xxxxx xx, 2013]  [testing: high]  [target: production]
+Data Crow 3.9.23  [Released on May 6, 2013]  [testing: high]  [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- References show without a name.
+
+
+-----------------------------------------------------------------------------------------
+Data Crow 3.9.23  [Released on April 20, 2013]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
